@@ -382,7 +382,7 @@ OTHER METHODS
 
   * setParserProp(prop => value, ...)
 
-    Change the parser processing behaviour by changing some of its internal properties. The following properties are available with this function: ``load-ext-dtd'', ``complete-attributes'', ``validation'', ``expand-entities''.
+    Change the parser processing behaviour by changing some of its internal properties. The following properties are available with this function: `load-ext-dtd`, `complete-attributes`, `validation`, `expand-entities`
 
     Since some of the properties can only be changed before any read has been done, it is best to set the parsing properties at the constructor.
 
@@ -390,7 +390,7 @@ OTHER METHODS
 
   * getParserProp(prop)
 
-    Get value of an parser internal property. The following property names can be used: ``load-ext-dtd'', ``complete-attributes'', ``validation'', ``expand-entities''.
+    Get value of an parser internal property. The following property names can be used: `load-ext-dtd`, `complete-attributes`, `validation`, `expand-entities`.
 
     Returns the value, usually True, False, or Failure in case of error.
 
