@@ -1,5 +1,7 @@
 0.0.5 2019-09-08
-    - [LibXML::Reader] fix get/set of parser options #20
+    - [LibXML::Reader]
+      -- fix get/set of parser options #20
+      -- implement .setParserProp method
     - [LibXML::XPath:::Context] - imnproved error handling
     - reduced displayed errors in test suite #19
 0.0.4 2019-09-06
